# CFDwavemaker

./: #generate_static.sh#  .gitignore  CFDwavemaker.cpp  CFDwavemaker.h  Irregular.cpp  Irregular.h  LICENSE.txt  Makefile  README.md  SpectralWaveData.h  SpectralWaveData.lib  Stokes5.c  Stokes5.cpp  Stokes5.h  Utils.cpp  Utils.h  VTKreader.cpp  VTKreader.h  Wavemaker.cpp  Wavemaker.h  Wavespectra.cpp  Wavespectra.h  cfdwavemaker.sln  cfdwavemaker.vcxproj  cfdwavemaker.vcxproj.filters  generate_dll.sh  generate_dll_linux_cluster.sh  generate_static.sh  input_file_reader.cpp  input_file_reader.h  lsgrid.cpp  lsgrid.h  probes.cpp  sgrid.cpp  sgrid.h
depricated/: SpectralWaveData_dummy.h  Wavespectra.cpp  Wavespectra.h  generate_dll.sh  generate_static.sh
div/: second_order_s_coordinates.m  stretching.m
docs/: pyproject.toml
docs/build_old/doctrees/: inputfile_description.doctree  inputfile_examples.doctree  installation.doctree
docs/build_old/html/: .buildinfo  inputfile_description.html  inputfile_examples.html  installation.html  search.html  theory.html
docs/build_old/html/_sources/: about.rst.txt  build_instructions.rst.txt  index.rst.txt  inputfile_description.rst.txt  inputfile_examples.rst.txt  installation.rst.txt  lisence.rst.txt  theory.rst.txt
docs/source/: CFDwavemaker.bib  about.rst  build.rst  build_instructions.rst  conf.py  download.rst  index.rst  inputfile_description.rst  inputfile_examples.rst  installation.rst  linking.rst  lisence.rst  references.rst  theory.rst  todolist.rst
docs/source/images/: flowchart.pptx
misc/: sloping_bottom.m  (+6 more)
(+133 files in other folders)
